--- a/style/index.css
+++ b/style/index.css
@@ -52,6 +52,10 @@ article {
   margin-left: 8px;
 }
 
+nav li a {
+  color: inherit;
+  text-decoration: none;
+}
 
 @media only screen and (min-width: 1200px) {
   body {
@@ -60,6 +64,7 @@ article {
   nav {
     display: block;
     width: 300px;
+    margin-right: 40px;
   }
 
   nav li {
